# mastering_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml
ch3_seven_dof_arm_gazebo/: CMakeLists.txt
ch3_seven_dof_arm_gazebo/launch/: seven_dof_arm_world.launch
chapter1_codes/averaging_action/: CMakeLists.txt  package.xml
chapter1_codes/averaging_action/action/: Averaging.action
chapter1_codes/averaging_action/src/: averaging_client.cpp  averaging_server.cpp
chapter1_codes/fibonacci_action/: CMakeLists.txt  package.xml
chapter1_codes/fibonacci_action/action/: Fibonacci.action
chapter1_codes/fibonacci_action/src/: fibonacci_client.cpp  fibonacci_server.cpp
chapter1_codes/mastering_ros_demo_pkg/: #CMakeLists.txt#  CMakeLists.txt  package.xml
chapter1_codes/mastering_ros_demo_pkg/action/: demo_action.action
chapter1_codes/mastering_ros_demo_pkg/msg/: data_array.msg  self.msg  unit.msg
chapter1_codes/mastering_ros_demo_pkg/src/: README.md  array_msg_publisher.cpp  array_msg_subscriber.cpp  demo_action_client.cpp  demo_action_server.cpp  demo_msg_publisher.cpp  demo_msg_subscriber.cpp  (+8 more)
chapter2_codes/mastering_ros_robot_description_pkg/: CMakeLists.txt  package.xml  urdf.rviz
chapter3_codes/ch3_diff_wheeled_robot_gazebo/: CMakeLists.txt  package.xml
chapter3_codes/ch3_diff_wheeled_robot_gazebo/config/: config.rviz
chapter3_codes/ch3_diff_wheeled_robot_gazebo/launch/: diff_wheeled_gazebo.launch  diff_wheeled_gazebo_laser.launch  keyboard_teleop.launch
chapter3_codes/ch3_diff_wheeled_robot_gazebo/urdf/: diff_wheeled_robot.xacro  wheel.urdf.xacro
chapter3_codes/ch3_seven_dof_arm_gazebo/: CMakeLists.txt  package.xml  readme.md
chapter3_codes/ch3_seven_dof_arm_gazebo/config/: seven_dof_arm_gazebo_control.yaml  seven_dof_arm_gazebo_world.yaml
chapter3_codes/ch3_seven_dof_arm_gazebo/launch/: seven_dof_arm_gazebo_control.launch  seven_dof_arm_world.launch
chapter3_codes/ch3_seven_dof_arm_gazebo/urdf/: ch3_seven_dof_arm_gazebo.xacro
chapter3_codes/diff_wheeled_robot_control/: CMakeLists.txt  package.xml
chapter4_codes/ch4_diff_wheeled_robot/: CMakeLists.txt  package.xml
chapter4_codes/ch4_diff_wheeled_robot/config/: full.rviz  gmapping.rviz
chapter4_codes/ch4_diff_wheeled_robot/launch/: amcl.launch  diff_wheeled_gazebo_full.launch  gmapping.launch
chapter4_codes/ch4_diff_wheeled_robot/launch/includes/: gmapping.launch.xml  move_base.launch.xml
chapter4_codes/ch4_diff_wheeled_robot/maps/: ref_map.pgm  ref_map.yaml
chapter4_codes/ch4_diff_wheeled_robot/urdf/: diff_wheeled_robot.xacro
chapter4_codes/ch4_diff_wheeled_robot/worlds/: ch4-willowgarage.world
chapter4_codes/ch4_seven_dof_arm_config/: .setup_assistant  CMakeLists.txt  package.xml
chapter4_codes/ch4_seven_dof_arm_gazebo/: CMakeLists.txt  package.xml
chapter4_codes/ch4_seven_dof_arm_gazebo/config/: seven_dof_arm_gazebo_joint_position.yaml  seven_dof_arm_gazebo_joint_states.yaml  trajectory_control.yaml
chapter4_codes/ch4_seven_dof_arm_gazebo/launch/: seven_dof_arm_gazebo_position.launch  seven_dof_arm_gazebo_states.launch  seven_dof_arm_trajectory_controller.launch  seven_dof_arm_world.launch
chapter4_codes/diff_wheeled_robot_gazebo/: CMakeLists.txt  default.rviz  package.xml
chapter4_codes/diff_wheeled_robot_gazebo/config/: config.rviz
chapter4_codes/diff_wheeled_robot_gazebo/launch/: amcl.launch  diff_wheeled_gazebo_full.launch  gmappings.launch
chapter4_codes/diff_wheeled_robot_gazebo/launch/include/: amcl.launch.xml  move_base.launch.xml
chapter4_codes/diff_wheeled_robot_gazebo/maps/: willo.pgm
chapter4_codes/diff_wheeled_robot_gazebo/param/: base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml  move_base_params.yaml
chapter4_codes/seven_dof_arm_config/: .setup_assistant  package.xml
chapter5_codes/gazebo_basic_world_plugin/: CMakeLists.txt  hello_world.cc
chapter5_codes/nodelet_hello_world/: CMakeLists.txt  hello_world.xml  package.xml
chapter5_codes/nodelet_hello_world/launch/: hello_world.launch
chapter5_codes/nodelet_hello_world/src/: hello_world.cpp
chapter5_codes/pluginlib_calculator/: CMakeLists.txt  calculator_plugins.xml  package.xml
chapter5_codes/pluginlib_calculator/include/pluginlib_calculator/: CalculatorBase.h  CalculatorPlugins.h  calculator_base.h  calculator_plugins.h
chapter5_codes/pluginlib_calculator/lib/: CalculatorPlugins.cpp
chapter5_codes/pluginlib_calculator/src/: calculator_loader.cpp  calculator_plugins.cpp
chapter6_codes/my_controller_pkg/: CMakeLists.txt  controller_plugins.xml  package.xml
chapter6_codes/my_controller_pkg/config/: my_controller.yaml
chapter6_codes/my_controller_pkg/include/my_controller_pkg/: my_controller_file.h
chapter6_codes/my_controller_pkg/launch/: my_controller.launch
chapter6_codes/my_controller_pkg/src/: my_controller_file.cpp
chapter6_codes/rviz_teleop_commander/: CMakeLists.txt  package.xml  plugin_description.xml
chapter6_codes/rviz_teleop_commander/src/: teleop_pad.cpp  teleop_pad.h
chapter8_codes/cv_bridge_tutorial_pkg/: CMakeLists.txt  README.md  package.xml
chapter8_codes/cv_bridge_tutorial_pkg/launch/: view.launch
chapter8_codes/cv_bridge_tutorial_pkg/src/: sample_cv_bridge_node.cpp
chapter8_codes/pcl_ros_tutorial_pkg/: CMakeLists.txt  package.xml
chapter8_codes/pcl_ros_tutorial_pkg/config/: view.rviz
chapter8_codes/pcl_ros_tutorial_pkg/launch/: view.launch
chapter8_codes/pcl_ros_tutorial_pkg/src/: pcl_filter.cpp  pcl_publisher.cpp  pcl_read.cpp  pcl_write.cpp
mastering_ros_demo_pkg/: CMakeLists.txt
mastering_ros_demo_pkg/msg/: data.msg  full_message.msg
mastering_ros_demo_pkg/src/: README.md  demo_action_client.cpp  demo_action_server.cpp  demo_service_client.cpp  demo_service_server.cpp  demo_topic_subscriber.cpp  self_msg_subscriber.cpp
mastering_ros_robot_description_pkg/: CMakeLists.txt  urdf.rviz
mastering_ros_robot_description_pkg/launch/: view_mobile_robot.launch  view_pan_tile_xacro.launch
mastering_ros_robot_description_pkg/urdf/: example.urdf  example.xacro  pan_tilt_generated.urdf  seven_dof_arm.xacro
(+50 files in other folders)
