<?xml version="1.0"?>
<package format="2">
  <name>ch4_diff_wheeled_robot</name>
  <version>0.0.0</version>
  <description>The ch4_diff_wheeled_robot package</description>

  <maintainer email="mamoru@todo.todo">mamoru</maintainer>
  
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>amcl</build_depend>
  <build_depend>gmapping</build_depend>

  <build_export_depend>amcl</build_export_depend>
  <build_export_depend>gmapping</build_export_depend>

  <exec_depend>amcl</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
	<gazebo_ros gazebo_media_path="${prefix}/worlds" />
  </export>
  
</package>
