<?xml version="1.0"?>
<package format="2">
  <name>my_controller_pkg</name>
  <version>0.0.0</version>
  <description>The my_controller_pkg package</description>

  <maintainer email="mamoru@todo.todo">mamoru</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>pr2_controller_interface</build_depend>
  <build_depend>pr2_mechanism_model</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>pr2_controller_interface</build_export_depend>
  <build_export_depend>pr2_mechanism_model</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>pr2_controller_interface</exec_depend>
  <exec_depend>pr2_mechanism_model</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>pr2_gazebo</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
	<pr2_controller_interface plugin="${prefix}/controller_plugins.xml"/>
  </export>
</package>
